6.0
	+ Enforce use of ncftp
	+ Remove old events and cloud-prof integrations
	+ Do not escape bash metacharacters in restore as it is not
	  required once shell quote is in place
3.5
	+ Remove support for sliced backup
	+ Set version to 3.5
3.4
	+ Set version to 3.4
	+ Fix regression in rsync method (contribution by billfarrow)
3.3
	+ Switch from Error to TryCatch for exception handling
	+ Hide password field for rsync method
	+ Added missing EBox::Exceptions uses
	+ Add date to duplicity-command.log
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.4
	+ Exclude / by default for coherency with the rest of modules like
	  firewall or proxy, and also allow now to include /
	+ Do not show default excludes like /dev or /proc on the interface,
	  they now can be customized in /etc/zentyal/ebackup.conf
	+ Fixed SCP method setting HOME environment in duplicity-wrapper
3.1.3
	+ Added menu icon
3.1.2
	+ Ported JS code to jQuery
3.1.1
	+ Removed code for deprecated cloud method and backup domains
3.1
	+ Remove unused Size and Message Types
	+ Added Pre-Depends on mysql-server to avoid problems with upgrades
	+ Depend on zentyal-core 3.1
3.0.6
	+ Added preCheckTarget hook
3.0.5
	+ Using EBox::FileSystem::mountPointIsMounted when checking if
	  file system backup target is mounted
	+ Avoid double utf8 encode when escaping file for commands, this
	  is neccesary after improved utf8 support in EBox::Sudo
	+ Make status and file cache work with utf8 characters
3.0.4
	+ Remove deprecated code for DR using ebackup
	+ duplicity-wrapper uses C locale to avoid locale problems
	+ Removed superfluous module lock in backup-tool
	+ Removed independent implementation of lock and unlock methods
	+ Fix small syntax error
3.0.3
	+ Removed dependency on events module
3.0.2
	+ Fixed code error when checking mount points of file target
	+ Fixed 'inexistent watcher' error in backup-tool
	+ Set default niceness of backup process to 10
3.0.1