@@ -11,7 +11,7 @@ Pre-Depends: mysql-server
 Depends: zentyal-core (>= 6.0), zentyal-core (<< 6.1),
          duplicity, libstring-shellquote-perl, libtimedate-perl,
          libdate-calc-xs-perl, cron, ncftp, sshpass, libterm-readkey-perl,
-         ntpdate, python-paramiko, ${misc:Depends}
+         ntpdate, python-pexpect, ${misc:Depends}
 Description: Zentyal - Backup
  Zentyal is a Linux small business server that can act as
  a Gateway, Unified Threat Manager, Office Server, Infrastructure
