@@ -1,4 +1,5 @@
 6.0
+	+ Use pexpect instead of obsolete paramiko backend for scp
 	+ Enforce use of ncftp
 	+ Remove old events and cloud-prof integrations
 	+ Do not escape bash metacharacters in restore as it is not
